test/parse-fail/keyword-let.he
/**
 *
 * compile-flags: -Zparse-only
 */
fn main
{
    let let = 0; //~ ERROR 2000
}
